<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_black2"
        android:fillViewport="true"
        tools:context=".camera.FaceCompareFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/faceDetectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/face_detection_header"
                android:textAlignment="center"
                android:textColor="@color/element_white"
                android:textSize="30sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/image_to_compare"
                android:layout_width="224dp"
                android:layout_height="224dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/selectedImageDescription"
                android:scaleType="fitStart"
                android:src="@drawable/no_image" />

            <TextView
                android:id="@+id/warningTextCompare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textAlignment="center"
                android:textColor="@color/element_white"
                android:textSize="20sp"
                android:textColorHint="@color/Red"
                android:textStyle="bold"
                tools:text="warning"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/select_image_btn_compare"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/file_upload_field"
                    android:clickable="true"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/select_image"
                    android:textColor="@color/element_white"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/upload"
                    app:layout_constraintBaseline_toBaselineOf="@+id/camera_btn_compare"
                    app:layout_constraintEnd_toStartOf="@+id/camera_btn_compare"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/camera_btn_compare"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/file_upload_field"
                    android:clickable="true"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/camera"
                    android:textColor="@color/element_white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/camera"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/select_image_btn_compare"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/confirm_compare_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/file_upload_field"
                    android:clickable="true"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/confirm_compare"
                    android:textColor="@color/element_white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/camera_btn_compare" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/similar_faces_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/element_white"
                android:textSize="30dp"
                android:textStyle="bold"
                tools:text="Bill Gates - 0.56" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>